Refactor packages: model, objreader